--- a/index.html
+++ b/index.html
@@ -43,11 +43,15 @@
 			<section id="landing" class="jumbotron text-center mt-3">
 				<h1>Salman Gayampal</h1>
 				<h3>Full Stack Web Developer</h3>
-				<p>Hi! My name is Salman <br />
+				<p><strong>Hi! My name is Salman.</strong>  <br />
 					An aspiring Web Developer who's passionate, curious, and career-driven,
 					with a strong desire for continuous learning and self-improvement. <br />
 					I am currently honing my skills in HTML, CSS, and JavaScript.</p>
-				<img src="images/first.jpg" class="img-fluid"/>
+
+
+			<hr>
+
+				<img src="images/first.jpg" class="img-fluid mt-4"/>
 			</section>
 			<!-- landing page ends here -->
 
@@ -58,6 +62,7 @@
 					<ul>
 						<li>HTML</li>
 						<li>CSS</li>
+						<li>JavaScript</li>
 					</ul>
 				</div>
 
