--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 			<hr>
 
-				<img src="images/first.jpg" class="img-fluid mt-4"/>
+				<img src="images/SG4.png" height="300" width="300" class="img-fluid mt-4" alt="Salman Photo"/>
 			</section>
 			<!-- landing page ends here -->
 
